--- a/src/node/CMakeLists.txt
+++ b/src/node/CMakeLists.txt
@@ -5,4 +5,8 @@ add_library( node
         ${SOURCES}
         ${HEADERS} )
 
-target_link_libraries(node paxosmelib)
+target_link_libraries(node paxosmecore)
+
+target_include_directories(node
+        PUBLIC
+        "${CMAKE_CURRENT_SOURCE_DIR}/../paxos/include")
