--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/storage)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/network)
+#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/network)
 
 add_subdirectory(core)
 add_subdirectory(node)
