--- a/src/node/CMakeLists.txt
+++ b/src/node/CMakeLists.txt
@@ -6,4 +6,5 @@ add_library( node
         ${HEADERS} )
 
 target_link_libraries(node paxosmecore)
+target_link_libraries(node network_grpc)
 target_include_directories(node PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
