Add compilier definitions.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,5 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/storage)
 
 add_subdirectory(core)
 add_subdirectory(node)
-add_subdirectory(network/grpc)
+#add_subdirectory(network/grpc)
 
