Improve pax learner.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/storage)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/util/include)
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR}/network)
 
 add_subdirectory(core)
