TODO bot involved.

--- a/.github/config.yml
+++ b/.github/config.yml
@@ -1,2 +1,4 @@
 todo:
-  keyword: "@makeAnIssue"
+  keyword: ['@todo','TODO', 'todo']
+  bodyKeyword: ['TODO', 'todo I:']
+  label: ['TODO', 'TODO I']
