--- a/src/node/CMakeLists.txt
+++ b/src/node/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-add_library( node
+add_executable( node
         ${SOURCES}
         ${HEADERS} )
 
