Network module reorg.

--- a/src/node/CMakeLists.txt
+++ b/src/node/CMakeLists.txt
@@ -1,10 +1,10 @@
-file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
+file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
 file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-add_executable( node
+add_library( node
         ${SOURCES}
         ${HEADERS} )
 
 target_link_libraries(node paxosmecore)
-target_link_libraries(node network_grpc)
+#target_link_libraries(node network_grpc)
 target_include_directories(node PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
