--- a/ut/CMakeLists.txt
+++ b/ut/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 add_executable( ut
         ${SOURCES}
-        ${HEADERS} )
+        ${HEADERS} ../include/sm.hpp)
 
 target_link_libraries(ut node)
 target_link_libraries(ut network_grpc)
