--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -41,6 +41,8 @@ add_library(paxosmecore
 target_link_libraries(paxosmecore util)
 target_link_libraries(paxosmecore sm)
 target_link_libraries(paxosmecore db)
+target_link_libraries(paxosmecore ${Protobuf_LIBRARIES})
+
 
 target_include_directories(paxosmecore PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_include_directories(paxosmecore PRIVATE ${Protobuf_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
