--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rd_party/grpc"]
 	path = 3rd_party/grpc
 	url = https://github.com/grpc/grpc
+[submodule "3rd_party/leveldb"]
+	path = 3rd_party/leveldb
+	url = https://github.com/google/leveldb.git
