--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,12 @@ project(paxosme)
 
 set(CMAKE_CXX_STANDARD 14)
 
+# common include
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+# leveldb include
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/leveldb/include)
+add_subdirectory(3rd_party/leveldb)
 
 add_subdirectory(src)
 add_subdirectory(ut)
