--- a/src/sm/CMakeLists.txt
+++ b/src/sm/CMakeLists.txt
@@ -6,3 +6,4 @@ add_library(sm
         ${SOURCES})
 
 target_include_directories(sm PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+target_link_libraries(sm PRIVATE leveldb)## leveldb PRIVATE?
