--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/util)
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR}/network)
 
 add_subdirectory(util)
-add_subdirectory(sm)
+add_subdirectory(kvsm)
 add_subdirectory(storage)
 add_subdirectory(core)
 
