log storage code clean.

--- a/src/storage/CMakeLists.txt
+++ b/src/storage/CMakeLists.txt
@@ -1,9 +1,10 @@
-file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include)
-file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+set(STORE_DIR mem)
+file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/${STORE_DIR}/*.hpp)
+file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${STORE_DIR}/*.cpp)
 
-add_library(db
+add_library(storage
         ${HEADERS}
         ${SOURCES})
 
-target_link_libraries(db util)
-target_include_directories(db PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+target_link_libraries(storage util)
+target_include_directories(storage PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
