--- a/ut/CMakeLists.txt
+++ b/ut/CMakeLists.txt
@@ -3,7 +3,8 @@ file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 add_executable( ut
         ${SOURCES}
-        ${HEADERS} ../include/sm.hpp)
+        ${HEADERS})
 
 target_link_libraries(ut node)
 target_link_libraries(ut network)
+target_link_libraries(ut sm)
