--- a/src/storage/CMakeLists.txt
+++ b/src/storage/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(STORE_DIR mem)
+set(STORE_DIR leveldb)
 file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/${STORE_DIR}/*.hpp)
 file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${STORE_DIR}/*.cpp)
 
@@ -6,5 +6,7 @@ add_library(storage
         ${HEADERS}
         ${SOURCES})
 
-target_link_libraries(storage util)
-target_include_directories(storage PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+# target_link_libraries(storage )
+# target_include_directories(storage PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+
+target_link_libraries(storage PRIVATE util leveldb)
