--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rd_party/leveldb"]
 	path = 3rd_party/leveldb
 	url = https://github.com/google/leveldb.git
+[submodule "3rd_party/gtest"]
+	path = 3rd_party/gtest
+	url = https://github.com/google/googletest.git
