--- a/ft/CMakeLists.txt
+++ b/ft/CMakeLists.txt
@@ -1,10 +1,10 @@
 file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp )
 file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-add_executable( ut
+add_executable( ft
         ${SOURCES}
         ${HEADERS})
 
-target_link_libraries(ut node)
-target_link_libraries(ut network)
-target_link_libraries(ut sm)
+target_link_libraries(ft node)
+target_link_libraries(ft network)
+target_link_libraries(ft sm)
