first ut of segment store

--- a/unittest/storage/CMakeLists.txt
+++ b/unittest/storage/CMakeLists.txt
@@ -1,6 +1,6 @@
 enable_testing()
 
-include_directories(${ROOT_DIR}/src/util/include)
+add_subdirectory(${ROOT_DIR}/src/util util)
 add_subdirectory(${ROOT_DIR}/src/storage storage)
 file(GLOB TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
@@ -13,7 +13,9 @@ SET(LEVELDB_BUILD_TESTS OFF CACHE BOOL "Build tests of leveldb.")
 
 add_subdirectory(${ROOT_DIR}/3rd_party/leveldb leveldb)
 target_link_libraries(test_storage gtest gtest_main)
-target_link_libraries(test_storage storage)
+
+# libz for crc32
+target_link_libraries(test_storage storage leveldb util z)
 # add_dependencies(test_storage GTest::gtest GTest::gtest_main)
 
 add_test(NAME test_add_example COMMAND test_storage 10 24 34)
