add ut for segment store init

--- a/unittest/storage/CMakeLists.txt
+++ b/unittest/storage/CMakeLists.txt
@@ -2,9 +2,14 @@ enable_testing()
 
 add_subdirectory(${ROOT_DIR}/src/util util)
 add_subdirectory(${ROOT_DIR}/src/storage storage)
-file(GLOB TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-add_executable(test_storage ${TEST_FILES})
+file(GLOB TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+file(GLOB TEST_ENV ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
+
+add_executable(test_storage 
+    ${TEST_FILES}
+    ${TEST_ENV}
+    )
 
 # set LEVELDB_BUILD_TESTS as OFF(default ON in leveldb cmakelists.txt) to build gtest separately, 
 # otherwise specify option "-DLEVELDB_BUILD_TESTS=OFF".
@@ -17,5 +22,7 @@ target_link_libraries(test_storage gtest gtest_main)
 # libz for crc32
 target_link_libraries(test_storage storage leveldb util z)
 # add_dependencies(test_storage GTest::gtest GTest::gtest_main)
+
+# target_include_directories(test_storage PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_test(NAME test_add_example COMMAND test_storage 10 24 34)
