--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "3rd_party/gtest"]
 	path = 3rd_party/gtest
 	url = https://github.com/google/googletest.git
+[submodule "3rd_party/glog"]
+	path = 3rd_party/glog
+	url = https://github.com/google/glog.git
