--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 [submodule "3rd_party/glog"]
 	path = 3rd_party/glog
 	url = https://github.com/google/glog.git
+[submodule "3rd_party/protobuf"]
+	path = 3rd_party/protobuf
+	url = https://github.com/protocolbuffers/protobuf.git
+	branch = 21.x
