--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.23)
 
 project(paxosme)
 
@@ -9,7 +9,11 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # leveldb include
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/leveldb/include)
+
 add_subdirectory(3rd_party/leveldb)
+
+SET(BUILD_TESTING OFF CACHE BOOL "Build tests of glog.")
+add_subdirectory(3rd_party/glog)
 
 add_subdirectory(src)
 add_subdirectory(ft)
