--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -8,4 +8,6 @@ set(ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")
 add_subdirectory(${ROOT_DIR}/3rd_party/gtest gtest)
 include_directories(${ROOT_DIR}/include)
 
+add_subdirectory(${ROOT_DIR}/3rd_party/glog glog)
+
 add_subdirectory(storage)
