--- a/src/network/CMakeLists.txt
+++ b/src/network/CMakeLists.txt
@@ -9,4 +9,4 @@ add_library(network
 add_subdirectory(grpc)
 add_subdirectory(asio)
 target_include_directories(network PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/ )
-target_link_libraries(network PRIVATE network_grpc paxosmecore)
+target_link_libraries(network PRIVATE network_grpc)
