grpc server reorg.

--- a/unittest/network/grpc/CMakeLists.txt
+++ b/unittest/network/grpc/CMakeLists.txt
@@ -1,6 +1,6 @@
 enable_testing()
 
-add_compile_definitions(NDEBUG) #disalbe debug log 
+# add_compile_definitions(NDEBUG) #disalbe debug log 
 add_subdirectory(${ROOT_DIR}/src/network network)
 
 file(GLOB TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
