--- a/src/network/grpc/CMakeLists.txt
+++ b/src/network/grpc/CMakeLists.txt
@@ -60,4 +60,4 @@ target_link_libraries(network_grpc PUBLIC ${_REFLECTION} ${Protobuf_LIBRARIES})
 
 target_include_directories(network_grpc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include/ )
 target_include_directories(network_grpc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/ )
-target_include_directories(network_grpc PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/protogen)
+target_include_directories(network_grpc PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/protogen)
